--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "18.3.1",
-    "react-native": "0.75.1"
+    "react-native": "0.75.1",
+    "react-native-ota-hot-update": "file:./react-native-ota-hot-update"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
