--- a/RNhotupdate/package.json
+++ b/RNhotupdate/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rn-hotupdate",
+  "name": "react-native-ota-hot-update",
   "version": "1.0.0",
   "description": "Hot update for react native",
   "main": "src/index",
