--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ yarn-error.log
 !.yarn/versions
 android/app/src/main/res/drawable-mdpi/
 ios/.xcode.env
+/android/index.android.bundle.zip
+/ios/main.jsbundle.zip
