--- a/android/build.gradle
+++ b/android/build.gradle
@@ -115,6 +115,7 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation 'com.jakewharton:process-phoenix:3.0.0'
 }
 
 if (isNewArchitectureEnabled()) {
