--- a/RNhotupdate/package.json
+++ b/RNhotupdate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-ota-hot-update",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Hot update for react native",
   "main": "src/index",
   "repository": "https://github.com/vantuan88291/react-native-ota-hot-update",
@@ -10,8 +10,13 @@
     "url": "https://github.com/vantuan88291/react-native-ota-hot-update/issues"
   },
   "homepage": "https://github.com/vantuan88291/react-native-ota-hot-update",
+  "dependencies": {
+    "buffer": "^6.0.3",
+    "isomorphic-git": "^1.27.2"
+  },
   "peerDependencies": {
-    "react-native": ">=0.63.4"
+    "react-native": ">=0.63.4",
+    "react-native-fs": "*"
   },
   "create-react-native-library": {
     "type": "module-legacy",
