--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   },
   "dependencies": {
     "buffer": "^6.0.3",
-    "isomorphic-git": "git+https://github.com/vantuan88291/isomorphic-git.git"
+    "isomorphic-git": "1.27.3"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.2",
