--- a/RNhotupdate/package.json
+++ b/RNhotupdate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-ota-hot-update",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "Hot update for react native",
   "main": "src/index",
   "repository": "https://github.com/vantuan88291/react-native-ota-hot-update",
@@ -12,7 +12,7 @@
   "homepage": "https://github.com/vantuan88291/react-native-ota-hot-update",
   "dependencies": {
     "buffer": "^6.0.3",
-    "isomorphic-git": "git+https://github.com/vantuan88291/isomorphic-git.git"
+    "isomorphic-git": "1.27.3"
   },
   "peerDependencies": {
     "react-native": ">=0.63.4",
