--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ jsconfig.json
 
 # Xcode
 #
-build/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -81,3 +80,6 @@ lib/
 ios/generated
 android/generated
 android/build
+example/android/app/build/
+example/android/build/
+example/ios/build/
