--- a/example/ios/OtaHotUpdateExample/Info.plist
+++ b/example/ios/OtaHotUpdateExample/Info.plist
@@ -48,5 +48,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
