--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
     "build:ios": "react-native build-ios --scheme OtaHotUpdateExample --mode Debug --extra-params \"-sdk iphonesimulator CC=clang CPLUSPLUS=clang++ LD=clang LDPLUSPLUS=clang++ GCC_OPTIMIZATION_LEVEL=0 GCC_PRECOMPILE_PREFIX_HEADER=YES ASSETCATALOG_COMPILER_OPTIMIZATION=time DEBUG_INFORMATION_FORMAT=dwarf COMPILER_INDEX_STORE_ENABLE=NO\""
   },
   "dependencies": {
+    "isomorphic-git": "^1.32.3",
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-fs": "2.20.0"
